# vietnamese-nsfw-filter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/vietnamese_nsfw_filter/: __init__.py  lexicon.py  normalize.py  thin.py
tests/: test_lexicon.py  test_normalize_thin.py
